====================================================
MySQL Connector/Python 2.0 - Release Notes & Changes
====================================================

MySQL Connector/Python
Copyright (c) 2009, 2014, Oracle and/or its affiliates. All rights reserved.

Full release notes:
 http://dev.mysql.com/doc/relnotes/connector-python/en/

v2.0.0a1
========

- BUG19184025: Fix results containing NULL
- BUG19169990: Fix sending/receiving using compressed connection
- BUG18956789: Fix Django TimeField 00:00:00 converting to MySQL NULL
- WL7228: Allow Connector/Python to use MySQL option files
- BUG18843153: Fix Django to check connection on each request
- WL7937: Allow LOAD DATA LOCAL INFILE by default
- BUG18742429: Fix prepared statements returning lots of columns
- BUG18814880: Fix stopping mysqld running unit tests on Windows
- WL7292: Add cursors returning dict and namedtuple as rows
- WL7462: Consolidate Python v2 and v3 code
- WL7716: Move commercial files and distribution to CPYINT
