@@ -11,6 +11,7 @@ Full release notes:
 v2.0.0a1
 ========
 
+- BUG19207922: Fix fetching multiple results when executing procedure
 - BUG19184025: Fix results containing NULL
 - BUG19169990: Fix sending/receiving using compressed connection
 - BUG18956789: Fix Django TimeField 00:00:00 converting to MySQL NULL
